# kwin

./: CMakeLists.txt  build.sh  buildsys.sh  dbus-zoom.txt  kwin_dbus_documentation.md  new_paintscreen.cpp  run.sh  temp_after.cpp  temp_before.cpp
autotests/: CMakeLists.txt  backend_consistency_test.cpp  surface_texture_test.cpp  vulkan_pipeline_test.cpp  vulkan_render_node_test.cpp  vulkan_surface_texture_test.cpp
autotests/integration/: kwin_wayland_test.cpp  placement_test.cpp  x11_window_test.cpp  xdgshellwindow_rules_test.cpp  xdgshellwindow_test.cpp
data/: directswitcherrc
src/: CMakeLists.txt  activation.cpp  client_machine.cpp  compositor_x11.cpp  dbusinterface.cpp  events.cpp  focuschain.cpp  focuschain.h  gestures.cpp  gpu_usage_monitor.cpp  gpu_usage_monitor.h  input.cpp  input.h  input_event.h  inputmethod.cpp  internalwindow.cpp  kscreenintegration.cpp  kwin.kcfg  layers.cpp  main.cpp  main_x11.cpp  netinfo.cpp  options.cpp  org.kde.KWin.WindowManager.xml  osd.cpp  outline.cpp  outputconfigurationstore.cpp  pluginmanager.cpp  pointer_input.cpp  pointer_input.h  rules.cpp  screenedge.cpp  sm.cpp  thumbnail_cache_manager.cpp  thumbnail_cache_manager.h  useractions.cpp  watchdog.cpp  window.cpp  windowmanagerdbusinterface.cpp  windowmanagerdbusinterface.h  (+5 more)
src/platformsupport/scenes/vulkan/: CMakeLists.txt  vulkanbackend.cpp  vulkanbackend.h  vulkancontext.cpp  vulkancontext.h  vulkanpipelinemanager.cpp  vulkanrenderpass.cpp  vulkanrendertarget.cpp  vulkansurfacetexture_x11.cpp  vulkansurfacetexture_x11.h  vulkantexture.cpp  vulkantexture.h
tests/: screenedgeshowtest.cpp
(+153 files in other folders)
